ajout du update et delete

--- a/app/views/tasks/show.html.erb
+++ b/app/views/tasks/show.html.erb
@@ -8,3 +8,12 @@
 </p>
 
 <%= link_to "Back", tasks_path %>
+<br>
+<%= link_to "Edit", edit_task_path(@task) %>
+<br>
+<%= link_to "Delete #{@task.title}",
+            task_path(@task),
+            method: :delete,
+            data: { confirm: "Are you sure?" } %>
+
+<a data-confirm="Are you sure?" rel="nofollow" data-method="delete" href="/tasks/2"></a>
